# FACE01_SAMPLE

./: .dockerignore  .gitignore  .gitmodules  CALL_ANTI_SPOOF.py  CALL_FACE01.py  CALL_GRAPHICS.py  CALL_IMAGER.py  CALL_example.py  CMakeLists.txt  DOCUMENT.md  Dockerfile  FACE01.code-workspace  FACE01.py  FACE01IMAGER129.py  FACE01_1.3.01.py  INSTALL_FACE01.sh  MANIFEST.ini  MEMO.md  Memory_leak.txt  README.md  SETTING_MANAGER_FOR_FACE01_1.4.05.py  anti_spoof.py  auto-sphinxドキュメント操作.sh  bk2_memray-flamegraph-output.html  bk_memray-flamegraph-output.html  cmakelists.txtのバックアップ  compile.py  config.ini  docker  docs  example  example.c  example.py  example.pyx  exclude-file.txt  import_time_resume  import文のロード時間  lightweight_sample.py  mainコード一応保存しとく  make_DockerImages.sh  (+19 more)
face01lib/: CMakeLists.txt  Calc.py  Core.c  Core.py  Initialize.c  Initialize.py  LoadImage.py  README_FACE01  __init__.py  add_cpp.cpp  anti_spoof.py  api (コピー).py  api.py  api_original.py  c_cpp_properties.jsonのバックアップ  cal_angle_coordinate.c  cal_specify_date  cal_specify_date.cpp  cmake_cpp_own.cpp  cmakelists.txtのバックアップ  combine.py  compile.py  cpp_cal_angle_coodinate  cspell.json  draw_telop.c  libdraw.py  load_preset_image.py  load_priset_image.c  load_priset_image.py  logger.py  memory_leak.py  module_test.py  return_face_image.py  return_frame_coordinate.c  return_percentage.c  return_percentage.html  sample.cpp  shellscript.sh  similar_percentage_to_tolerance.py  simple_face_recognition.py  (+7 more)
face01lib/FACE01.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
face01lib/cpp/: add_cpp.cpp  bk_test_numpy.cpp  compile.py  cpp_angle_of_view_specification.cpp  cpp_cal_angle_coodinate.cpp  return_face_image.cpp  test_numpy.cpp
face01lib/dlib_model/: __init__.py
face01lib/face_recognition_models/: __init__.py
face01lib/models/: __init__.py
face01lib/other/: face_learning.py  module_test.py  name_encoding_dict.py
face01lib/pyx/: Calc.c  Calc.html  Calc.py  Calc.pyx  Core.c  Core.html  Core.py  Core.pyx  Initialize.c  Initialize.html  Initialize.py  LoadImage.c  LoadImage.html  LoadImage.py  VidCap.c  __init__.c  __init__.html  _compile.c  api.c  api.html  api.py  api.pyx  compile.c  compile.html  compile.py  dockerfile  libdraw.c  load_priset_image.c  load_priset_image.html  load_priset_image.pyx  logger.c  logger.html  memory_leak.c  memory_leak.py  memory_leak.pyx  return_face_image.c  return_face_image.html  return_face_image.py  return_face_image.pyx  similar_percentage_to_tolerance.c  (+8 more)
face01lib/pyx/捨てるかもしれないファイル/: Calc.c  FACE01.pyx  Initialize.c  LoadImage.c  api.c  example_base.py  image.py  libdraw.pyx  load_priset_image.c  (+8 more)
face01lib/simple_face_recognition_models/: __init__.py
(+195 files in other folders)
